--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,3 +1,4 @@
+  
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <a class="navbar-brand" href="#">Lab 5</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,12 +13,21 @@
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       </li>
+	<li class="nav-item">
+        <a class="nav-link" href="{{ url_for('secure_page') }}">Secure Page</a>
+      </li>
     </ul>
 
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-      </li>
+      {% if current_user.is_authenticated %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
+      {% else %}
+          <li class="nav-item active">
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+          </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
